refactor kennzahlvalues
